# fastapi-web-server

./: README.md  config.py  package-lock.json  pyproject.toml  requirements.txt  serverless.yml
.serverless/: meta.json
app/: ipstack.py  main.py
app/utils/: location_temperature.py
tests/: test_location_temperature.py  test_main.py
