[tool.poetry]
name = "web-server"
version = "0.1.0"
description = "A basic web server"
authors = ["chineduCoded <chinedujohn17@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
pytest-mock = "^3.14.0"
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
